--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -10,20 +10,10 @@
                 <form ng-submit="addOrUpdateAccount()" class="mt-10">
                     <div class="col-sm-6 col-xs-12">
                         <div class="form-group col-xs-12">
-                            <label for="accountId" class="col-sm-4 pall-zero">Account Name</label>
-                            <div class="col-sm-8 col-xs-12">
-                                <input ng-model="account.name" ng-readonly="account._id" type="text"
-                                       class="form-control"
-                                       id="accountId"
-                                       placeholder="Account Name">
-                            </div>
-                        </div>
-
-                        <div class="form-group col-xs-12">
                             <label for="userName" class="col-sm-4 pall-zero col-xs-12">User Name</label>
                             <div class="col-xs-12 col-sm-8">
                                 <input ng-model="account.userName" type="text" class="form-control" id="userName"
-                                       placeholder="User name">
+                                       placeholder="Username">
                             </div>
                         </div>
 
@@ -36,8 +26,34 @@
                         </div>
 
                         <div class="form-group col-xs-12">
+                            <label for="contactPhone" class="col-sm-4 pall-zero col-xs-12">Mobile</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="account.contactPhone" type="text" class="form-control" id="contactPhone"
+                                       placeholder="Mobile">
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12">
                             <div class="">
-                                <label class="col-sm-4 pall-zero">Account status</label>
+                                <label class="col-sm-4 pall-zero">ERP Status</label>
+                                <div class="col-sm-8">
+                                    <input type="checkbox" ng-model="account.erpEnabled">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12">
+                            <div class="">
+                                <label class="col-sm-4 pall-zero">GPS Status</label>
+                                <div class="col-sm-8">
+                                    <input type="checkbox" ng-model="account.gpsEnabled">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12">
+                            <div class="">
+                                <label class="col-sm-4 pall-zero">Account Status</label>
                                 <div class="col-sm-8">
                                     <input type="checkbox" ng-model="account.isActive">
                                 </div>
