--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -3,18 +3,10 @@
         <h2 class="login-heading">Login</h2>
         <div class="mt-10">
             <div class="form-group col-xs-12">
-                <label for="name" class="col-sm-4 col-xs-12 pall-zero">Account Name</label>
-                <div class="col-sm-8 col-xs-12">
-                    <input ng-model="loginParams.name" type="text" class="form-control" id="name"
-                           placeholder="Account Name">
-                </div>
-            </div>
-
-            <div class="form-group col-xs-12">
-                <label for="userName" class="col-sm-4 col-xs-12 pall-zero">User Name</label>
+                <label for="userName" class="col-sm-4 col-xs-12 pall-zero">Username</label>
                 <div class="col-sm-8 col-xs-12">
                     <input ng-model="loginParams.userName" type="text" class="form-control" id="userName"
-                           placeholder="User name">
+                           placeholder="User Name">
                 </div>
             </div>
 
@@ -23,6 +15,14 @@
                 <div class="col-sm-8 col-xs-12">
                     <input ng-model="loginParams.password" type="password" class="form-control" id="password"
                            placeholder="Password">
+                </div>
+            </div>
+
+            <div class="form-group col-xs-12">
+                <label for="userName" class="col-sm-4 col-xs-12 pall-zero">Mobile</label>
+                <div class="col-sm-8 col-xs-12">
+                    <input ng-model="loginParams.contactPhone" type="text" class="form-control" id="contactPhone"
+                           placeholder="Mobile">
                 </div>
             </div>
         </div>
