--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -17,7 +17,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group col-xs-12" ng-hide="account._id">
+                        <div class="form-group col-xs-12" ng-hide="!account._id">
                             <label for="password" class="col-sm-4 pall-zero col-xs-12">Password</label>
                             <div class="col-xs-12 col-sm-8">
                                 <input ng-model="account.password" type="password" class="form-control" id="password"
