--- a/client/views/partials/payments/paymentsEdit.html
+++ b/client/views/partials/payments/paymentsEdit.html
@@ -33,7 +33,7 @@
                                        class="form-control" typeahead-min-length="1"
                                        typeahead-on-select="selectPartyId($item)"
                                        typeahead-select-on-exact="true" placeholder="Party"
-                                       typeahead-no-results="noParty">
+                                       typeahead-no-results="noParty" autocomplete="false">
                                 <div ng-show="noParties">
                                     <i class="glyphicon glyphicon-remove red"></i>
                                     <span class="red"> No Results Found </span>
