--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -69,7 +69,8 @@
                                                placeholder="To">
                                     </div>
                                     <div class="col-sm-1 col-xs-12">
-                                        <button class="btn btn-custom btn-default" ng-click="deleteTripLane($index);"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
+                                        <button class="btn btn-custom btn-default" ng-click="deleteTripLane($index);">
+                                            <i class="fa fa-minus-circle" aria-hidden="true"></i></button>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
