Dashboard module Added

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
     <link rel="stylesheet" type="text/css"
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
 </head>
@@ -32,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand logo" href="#" ui-sref="accounts"><img src="images/logo.png"></a>
+            <a class="navbar-brand logo" href="#" ui-sref="dashboard"><img src="images/logo.png"></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
