--- a/client/views/partials/expiry/expiryCount.html
+++ b/client/views/partials/expiry/expiryCount.html
@@ -1,41 +1,43 @@
 <top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="TrucksController">
+<div class="container-fluid">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
         </div>
         <div class="main-right col-xs-9">
-            <div class="col-xs-12 account-edit">
-                <h2 class="login-heading">{{pagetitle}}</h2>
-                <form class="mt-10">
-                    <div class="col-xs-12 col-sm-12">
+            <div class="col-xs-12">
+                <div class="col-xs-6"  ng-controller="TrucksController">
+                <h3 class="login-heading mt-5">Expired</h3>
+
+                    <div class="col-xs-12 mt-10">
                         <div class="form-group col-xs-12">
-                            <label class="col-sm-4 col-xs-12 pall-zero"><a ui-sref="fitnessExpiryTrucks">Fitness Expiry Count</a></label>
-                            <div class="col-xs-12 col-sm-8">
+                            <label class="col-sm-6 col-xs-12 pall-zero">
+                                <a ui-sref="fitnessExpiryTrucks">Fitness Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-4">
                                 <a ui-sref="fitnessExpiryTrucks"> {{allExpiryCountdata.fitnessExpiryCount}} </a>
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
-                            <label class="col-sm-4 col-xs-12 pall-zero"><a ui-sref="permitExpiryTrucks">Permit Expiry Count</a></label>
-                            <div class="col-xs-12 col-sm-8">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="permitExpiryTrucks">Permit Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
                                 <a ui-sref="permitExpiryTrucks">{{allExpiryCountdata.permitExpiryCount}}</a>
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
-                            <label class="col-sm-4 col-xs-12 pall-zero"><a ui-sref="insuranceExpiryTrucks">Insurance Expiry Count</a></label>
-                            <div class="col-xs-12 col-sm-8">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="insuranceExpiryTrucks">Insurance Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
                                 <a ui-sref="insuranceExpiryTrucks">{{allExpiryCountdata.insuranceExpiryCount}}</a>
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
-                            <label class="col-sm-4 col-xs-12 pall-zero"><a ui-sref="pollutionExpiryTrucks">Pollution Expiry Count</a></label>
-                            <div class="col-xs-12 col-sm-8">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="pollutionExpiryTrucks">Pollution Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
                                 <a ui-sref="pollutionExpiryTrucks">{{allExpiryCountdata.pollutionExpiryCount}}</a>
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
-                            <label class="col-sm-4 col-xs-12 pall-zero"><a ui-sref="taxExpiryTrucks">Tax Expiry Count</a></label>
-                            <div class="col-xs-12 col-sm-8">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="taxExpiryTrucks">Tax Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
                                 <a ui-sref="taxExpiryTrucks">{{allExpiryCountdata.taxExpiryCount}}</a>
                             </div>
                         </div>
@@ -43,26 +45,101 @@
 
                     <div class="clearfix"></div>
 
-                    <div class="col-xs-4 col-xs-push-4">
+            </div>
+                <div class="col-xs-6" ng-controller="AddEditTripCtrl">
+                    <h3 class="login-heading">Vehicle Revenue</h3>
+                     <div class="col-xs-12 mt-10">
+                        <label class="col-sm-6"><a ui-sref="revenueByVehicle">From All Vehicles</a></label>
+                        <div class="col-sm-6"><a ui-sref="revenueByVehicle">{{totalRevenue}}</a></div>
+                    </div>
 
-                        <div>
-                            <div class="alert alert-danger" role="alert" ng-show="allExpiryCountdata.error.length">
-                                <ul>
-                                    <li  ng-repeat="error in allExpiryCountdata.error">{{error}}</li>
-                                </ul>
+
+                    <div class="clearfix"></div>
+
+                </div>
+            </div>
+            <div class="col-xs-12">
+               <!-- <div class="col-xs-6">
+                    <h2 class="login-heading">Expired</h2>
+
+                    <div class="col-xs-12 margin-top-40">
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero">
+                                <a ui-sref="fitnessExpiryTrucks">Fitness Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-4">
+                                <a ui-sref="fitnessExpiryTrucks"> {{allExpiryCountdata.fitnessExpiryCount}} </a>
                             </div>
-
-                            <div class="alert alert-success" role="alert" ng-show="allExpiryCountdata.success.length">
-                                <ul>
-                                    <li  ng-repeat="success in allExpiryCountdata.success">{{success}}</li>
-                                </ul>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="permitExpiryTrucks">Permit Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="permitExpiryTrucks">{{allExpiryCountdata.permitExpiryCount}}</a>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="insuranceExpiryTrucks">Insurance Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="insuranceExpiryTrucks">{{allExpiryCountdata.insuranceExpiryCount}}</a>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="pollutionExpiryTrucks">Pollution Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="pollutionExpiryTrucks">{{allExpiryCountdata.pollutionExpiryCount}}</a>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="taxExpiryTrucks">Tax Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="taxExpiryTrucks">{{allExpiryCountdata.taxExpiryCount}}</a>
                             </div>
                         </div>
                     </div>
-                </form>
+
+                    <div class="clearfix"></div>
+
+                </div>-->
+               <!-- <div class="col-xs-6">
+                    <h2 class="login-heading">Expired</h2>
+
+                    <div class="col-xs-12 margin-top-40">
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero">
+                                <a ui-sref="fitnessExpiryTrucks">Fitness Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-4">
+                                <a ui-sref="fitnessExpiryTrucks"> {{allExpiryCountdata.fitnessExpiryCount}} </a>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="permitExpiryTrucks">Permit Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="permitExpiryTrucks">{{allExpiryCountdata.permitExpiryCount}}</a>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="insuranceExpiryTrucks">Insurance Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="insuranceExpiryTrucks">{{allExpiryCountdata.insuranceExpiryCount}}</a>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="pollutionExpiryTrucks">Pollution Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="pollutionExpiryTrucks">{{allExpiryCountdata.pollutionExpiryCount}}</a>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
+                            <label class="col-sm-6 col-xs-12 pall-zero"><a ui-sref="taxExpiryTrucks">Tax Expiry Count</a></label>
+                            <div class="col-xs-12 col-sm-6">
+                                <a ui-sref="taxExpiryTrucks">{{allExpiryCountdata.taxExpiryCount}}</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+
+                </div>-->
             </div>
-
-
         </div>
     </div>
 </div>
