--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -1,11 +1,5 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="DriversListCtrl">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
 
-        <div class="main-right col-xs-9">
+        <div class="main-right col-xs-9" ng-controller="DriversListCtrl">
             <h3>Drivers</h3>
 
             <div>
