--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -1,12 +1,6 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="AddEditDriverCtrl">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
 
 
-        <div class="main-right col-xs-9">
+        <div class="main-right col-xs-9" ng-controller="AddEditDriverCtrl">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pageTitle}}</h2>
                 <form ng-submit="addOrUpdateAccount()">
