--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -1,12 +1,6 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="AddEditTruckCtrl">
-    <div class="row pall-zero">
-        <div class="col-sm-2 col-xs-12 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
 
 
-        <div class="main-right col-sm-9 col-xs-12">
+        <div class="main-right col-sm-9 col-xs-12" ng-controller="AddEditTruckCtrl">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pageTitle}}</h2>
                 <div class="col-sm-6 col-xs-12 mt-10">
@@ -99,9 +93,7 @@
                 </div>
 
             </div>
-        </div>
-    </div>
-</div>
+
 
 
 
