--- a/client/views/index.html
+++ b/client/views/index.html
@@ -57,9 +57,25 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<top-navigation></top-navigation>
+<div class="container-fluid">
+    <div class="row pall-zero">
+        <div class="col-xs-2 pall-zero">
+            <left-menu label="Dashboard"></left-menu>
+            <left-menu label="Accounts"></left-menu>
+            <left-menu label="Drivers"></left-menu>
+            <left-menu label="Trucks"></left-menu>
+            <left-menu label="Trips"></left-menu>
+            <left-menu label="Party"></left-menu>
+            <left-menu label="Expense-Master" ></left-menu>
+            <left-menu label="Expenses"></left-menu>
+            <left-menu label="Payments"></left-menu>
+        </div>
 
-<div>
-    <ui-view></ui-view>
+        <div>
+            <ui-view></ui-view>
+        </div>
+    </div>
 </div>
 
 <!--bower scripts-->
@@ -72,7 +88,8 @@
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
+<script type="text/javascript"
+        src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
 
 
 <!--app-->
@@ -80,7 +97,7 @@
 
 <!--services-->
 <script src="js/services.js"></script>
-<script src="js/directives/leftNav.js"></script>
+<script src="js/directives/leftMenu.js"></script>
 <script src="js/directives/datePicker.js"></script>
 <script src="js/directives/bodyMenu.js"></script>
 <script src="js/services/paginationService.js"></script>
