--- a/client/views/partials/ExpenseMaster/expense-master-edit.html
+++ b/client/views/partials/ExpenseMaster/expense-master-edit.html
@@ -1,10 +1,5 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="ExpenseMasterEditCrtl">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
-        <div class="main-right col-xs-9">
+
+        <div class="main-right col-xs-9" ng-controller="ExpenseMasterEditCrtl">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pagetitle}}</h2>
                 <form class="mt-10">
@@ -42,5 +37,3 @@
                 </form>
             </div>
         </div>
-    </div>
-</div>
