--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -1,10 +1,5 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="AddEditAccountCtrl">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
-        <div class="main-right col-xs-9">
+
+        <div class="main-right col-xs-9" ng-controller="AddEditAccountCtrl">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pagetitle}}</h2>
                 <form ng-submit="addOrUpdateAccount()" class="mt-10">
