--- a/client/views/partials/groups/groupsEdit.html
+++ b/client/views/partials/groups/groupsEdit.html
@@ -1,10 +1,5 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="groupEditController" ng-init="getGroupDetails();">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
-        <div class="main-right col-xs-9">
+
+        <div class="main-right col-xs-9" ng-controller="groupEditController" ng-init="getGroupDetails();">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pagetitle}}</h2>
 
@@ -87,5 +82,3 @@
             </form>
         </div>
     </div>
-</div>
-</div>
