--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -1,10 +1,5 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="AddEditPartyCtrl">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
-        <div class="main-right col-xs-9">
+
+        <div class="main-right col-xs-9" ng-controller="AddEditPartyCtrl">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pageTitle}}</h2>
                 <form class="mt-10">
@@ -124,8 +119,6 @@
                 </table>
             </div>
         </div>
-    </div>
-</div>
 
 
 
