--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -1,10 +1,5 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="PartyListController">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
-        <div class="main-right col-xs-9">
+
+        <div class="main-right col-xs-9"  ng-controller="PartyListController">
             <h3>Party</h3>
             <button class="btn btn-blue pull-right mb-10" ng-click="goToEditPartyPage()">Add Party</button>
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
@@ -42,5 +37,3 @@
             </table>
 
         </div>
-    </div>
-</div>
