--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -1,10 +1,5 @@
-<top-navigation></top-navigation>
-<div class="container-fluid" ng-controller="AddEditTripCtrl">
-    <div class="row pall-zero">
-        <div class="col-xs-2 pall-zero">
-            <left-navigation></left-navigation>
-        </div>
-        <div class="main-right col-xs-9">
+
+        <div class="main-right col-xs-9" ng-controller="AddEditTripCtrl">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pagetitle}}</h2>
                 <form class="mt-10" autocomplete="off">
@@ -131,7 +126,3 @@
 
         </div>
         <div class="clearfix"></div>
-    </div>
-</div>
-
-</div>
