--- a/client/views/partials/dashboard/taxExpiryTrucks.html
+++ b/client/views/partials/dashboard/taxExpiryTrucks.html
@@ -1,5 +1,5 @@
 
-        <div class="main-right col-xs-9" ng-controller="TrucksController">
+        <div class="main-right col-xs-9" ng-controller="dashboardController">
             <h3>Tax Expiry Trucks List</h3>
             <div class="toolbar-button-div pull-right mb-10">
                 &nbsp;
