--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -266,6 +266,15 @@ body{
 .fa-minus-circle{
     color: red!important;
 }
-/*.ui-notification > .message {
-    margin: 0;
-}*/
+.stylish-input-group .input-group-addon{
+    background: white !important;
+}
+.stylish-input-group .form-control{
+    border-right:0;
+    box-shadow:0 0 0;
+    border-color:#ccc;
+}
+.stylish-input-group button{
+    border:0;
+    background:transparent;
+}
