--- a/client/views/index.html
+++ b/client/views/index.html
@@ -61,8 +61,8 @@
 <top-navigation ng-if="isLoggedIn()"></top-navigation>
 <div class="container-fluid">
     <div class="row pall-zero">
-        <div class="col-sm-2 col-xs-12 pall-zero"  ng-if="isLoggedIn()" ng-controller="LeftNavCtrl">
-         <!--   <left-menu label="Dashboard"></left-menu>-->
+        <div class="col-sm-2 col-xs-12 pall-zero mt-5"  ng-if="isLoggedIn()" ng-controller="LeftNavCtrl">
+            <left-menu label="Dashboard"></left-menu>
             <left-menu label="Accounts" ng-if="canEditAccounts()"></left-menu>
             <left-menu label="Drivers"></left-menu>
             <left-menu label="Trucks"></left-menu>
@@ -123,5 +123,6 @@
 <script src="/js/modules/pendingBalanceModule.js"></script>
 <script src="js/modules/trackMapModule.js"></script>
 <script src="js/modules/groupMap.js"></script>
+<script src="js/modules/dashBoardModule.js"></script>
 </body>
 </html>
