Added Driver Details

--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -15,13 +15,15 @@
                     <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item col-sm-2">{{
                         trips.attrs.partyName }}
                     </td>
+                    <td data-title="'Driver'" sortable="'fullName'" class="clickable-item col-sm-2">{{
+                        trips.attrs.fullName }}
+                    </td>
                     <td data-title="'Freight Amount'" sortable="'freightAmount'" class="clickable-item col-sm-1">{{
                         trips.freightAmount }}
                     </td>
                     <td data-title="'Trip Lane'" sortable="'tripLane'" class="clickable-item col-sm-2">{{
                         trips.tripLane }}
                     </td>
-
                     <td data-title="'Created By'" sortable="'createdByName'"
                         class="clickable-item col-sm-1">{{ trips.attrs.createdByName }}
                     </td>
