--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -52,6 +52,22 @@
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
+                            <label for="driverId" class="col-sm-4 col-xs-12  pall-zero">Driver
+                            </label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input type="text" id="driverId" ng-model="driverId"
+                                       uib-typeahead="driver.fullName for driver in drivers | filter:$viewValue"
+                                       class="form-control" typeahead-min-length="1"
+                                       typeahead-on-select="selectTruckDriver($item);"
+                                       typeahead-select-on-exact="true" placeholder="Driver"
+                                       typeahead-no-results="noDriver" autocomplete="false">
+                                <div ng-show="noDriver">
+                                    <i class="glyphicon glyphicon-remove red"></i>
+                                    <span class="red"> No Results Found </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12">
                             <label for="tripLane" class="col-xs-12 col-sm-4 pall-zero">Trip Lane</label>
                             <div class="col-sm-8 col-xs-12">
                                 <input id="tripLane" type="text" ng-model="trip.tripLane"
