--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -57,6 +57,11 @@
                                        placeholder="Description">
                             </div>
                         </div>
+                        <div class="form-group col-xs-12" ng-if="expenseTitle == 'Other'">
+                            <label for="expenseName" class="col-xs-12 col-sm-4 pall-zero">Other Expense</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="expenseDetails.expenseName" type="text" class="form-control" id="expenseName" placeholder="Other expense type"></div>
+                        </div>
                     </div>
 
                     <div class="clearfix"></div>
