Dashboard Pending Payments fixed

--- a/client/views/partials/dashboard/amountByParties.html
+++ b/client/views/partials/dashboard/amountByParties.html
@@ -1,6 +1,6 @@
 
 <div class="main-right col-xs-9" ng-controller="dashboardController">
-    <h3>Amount by Parties</h3>
+    <h3>Pending Payments</h3>
     <div class="toolbar-button-div pull-right mb-10">
         &nbsp;
     </div>
