--- a/client/views/partials/dashboard/amountByPartyId.html
+++ b/client/views/partials/dashboard/amountByPartyId.html
@@ -1,6 +1,6 @@
 
 <div class="main-right col-xs-9" ng-controller="paymentsById">
-    <h3>Payments by {{partyName}}</h3>
+    <h3>Payments of {{partyName}}</h3>
     <div class="toolbar-button-div pull-right mb-10">
         &nbsp;
     </div>
