--- a/client/views/partials/dashboard/revenueByVehicle.html
+++ b/client/views/partials/dashboard/revenueByVehicle.html
@@ -1,5 +1,5 @@
 <div class="main-right col-xs-9" ng-controller="dashboardController">
-    <h3>Revenue by Vehicle</h3>
+    <h3>Revenue</h3>
     <div class="toolbar-button-div pull-right mb-10">
         &nbsp;
     </div>
@@ -7,7 +7,7 @@
         <tr ng-repeat="revenueListByRegNo in revenueByVehicle" style="text-align: center;">
             <td data-title="'Registration No'" sortable="'registrationNo'" class="clickable-item col-sm-2">
                 <a href="#"
-                   ng-click="gotorevenueByVehicleId(revenueListByRegNo.registrationNo)"> 
+                   ng-click="gotorevenueByVehicleId(revenueListByRegNo.registrationNo, revenueListByRegNo.attrs.truckName)">
                    {{revenueListByRegNo.attrs.truckName}}</a>
             </td>
             <td data-title="'Total Freight'" sortable="'totalFreight'" class="clickable-item col-sm-2">
